Add dump and die helper

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "php": "^8.0"
     },
     "autoload": {
+        "files": [
+            "src/helpers.php"
+        ],
         "psr-4": {
             "Bubblegum\\": "src/"
         }
